  - replacement method for FLPar '[<-', can now use a logical array for indexing.
  - propagate(FLPar) is now able to deal with all dimnames combinations.
  - default values for lower limit of parameters in 'ricker' model lowered to 1e-10.
  - propagate(FLPar) is now defined. The fill.iter argument deafults to FALSE, in
    contrast with FLQuant. Objects do not need to have iter=1 to be extended, but only
    if fill.iter=FALSE.
  - improved selection and replacement for FLPar.
  - rnorm for mean=missing and sd=missing are now defined, Default values are 0 and 1
    respectively.

BUG FIXES
  - FS#2 - FLCohort breaks for a single age quant.
  - dims(FLComp) was failing for those with less elements in @range.
  - FS#3 - Option to handle NAs in quantMeans is not implemented. Added as well for
    quantTotals and yearTotals.
  - FS#4 - Problems changing lower and upper in fmle. upper<- and lower<- now extend
    value to the required length by recycling the input vector.
  - FS#6 - Quant name of rec() is inappropriate. Value now taken from dimnames$quant.
  - FLPar(FLPar) did not handle properly all dimnames combinations.
  - plot(FLStocks) can now handle objects without @name. key and main are now turned off
    by default. Use key=TRUE to get the standard key for groups.
  - transform(FLComp) did not create correctly the necessary environment, so arguments
    on parent.frame could not be found.
  - The FLFleet example dataset, bt4, has been actualized to the new FLCatch class, where
    the catch.* slots are now substituted by methods.
  - FLPar(vector) did not use the whole input vector. Vector is now applied along all
    dimensions starting by row.
  - '[<-' for FLPar now returns the correct class if called with a derived class.
	
UTILITIES

DOCUMENTATION
  - FS#5 - The FLR citation is wrong! D'oh!. Fixed.
  - Classes man pages now include a section on Constructor and the contructor man pages were removed (EJ, 20090609)
    
DEPRECATED & DEFUNCT