@@ -1,8 +1,10 @@
 \name{rlnorm}
 \docType{methods}
 \alias{rlnorm,numeric,FLQuant,FLQuant-method}
+\alias{rlnorm,numeric,FLQuant,missing-method}
 \alias{rlnorm,numeric,FLQuant,numeric-method}
 \alias{rlnorm,numeric,numeric,FLQuant-method}
+\alias{rlnorm,numeric,missing,FLQuant-method}
 \alias{rlnorm,numeric,FLQuantPoint,missing-method}
 \title{Method rlnorm}
 \description{
